# Project-Graphics

./: CMakeLists.txt  README.md
.cache/clangd/index/: glad.c.43393DC7F62A9E90.idx  glad.h.2F550BBC715BD42A.idx  khrplatform.h.C6EFBFDFEAAF5E4E.idx  mirror_room.cpp.A73BCEAEA75D3788.idx  stb_image.h.8E4173DCADDFBF15.idx
OpenGL_Course_Template/: CMakeLists.txt
OpenGL_Course_Template/assets/shaders/: model.vert
OpenGL_Course_Template/src/: App.cpp  IDemo.h
OpenGL_Course_Template/src/core/: Shader.cpp  Shader.h
OpenGL_Course_Template/src/weeks/: Lighting.h
assets/models/: Mirror Maze-BodyPocket.stl
assets/shaders/: week01.frag
src/: App.h  main.cpp
src/weeks/: Lighting.cpp  mirror_room.cpp  shader.cpp  test.cpp
tools/vcpkg/installed/vcpkg/: status
tools/vcpkg/installed/x64-mingw-dynamic/share/glfw3/: vcpkg.spdx.json  vcpkg_abi_info.txt
tools/vcpkg/installed/x64-mingw-dynamic/share/glm/: vcpkg.spdx.json  vcpkg_abi_info.txt
tools/vcpkg/installed/x64-mingw-dynamic/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
tools/vcpkg/installed/x64-mingw-dynamic/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
tools/vcpkg/scripts/azure-pipelines/linux/: Dockerfile
tools/vcpkg/scripts/boost/: generate-ports.ps1
tools/vcpkg/scripts/cmake/: vcpkg_configure_make.cmake  vcpkg_download_sourceforge.cmake
tools/vcpkg/scripts/test_ports/cmake-user/project/: CMakeLists.txt
tools/vcpkg/scripts/test_ports/vcpkg-ci-python3/: vcpkg.json
tools/vcpkg/scripts/test_ports/vcpkg-ci-python3/project/: CMakeLists.txt
tools/vcpkg/scripts/toolchains/: xbox.cmake
(+2 files in other folders)
